refactor: clean up xcontent usage, functional utils